--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -30,7 +30,9 @@ div {
 
 main {
   max-width: 1200px;
-  margin: 120px auto;
+  margin-top: 120px;
+  margin-left: auto;
+  margin-right: auto;
   color: var(--color-text);
 }
 
@@ -48,22 +50,19 @@ html {
 
 .intro {
   width: 100%;
-  padding: 100px 100px;
-  font-size: 50px;
-  font-weight: 800;
+  padding: 2rem 3rem;
+  z-index: 1;
 }
-
 .header {
   padding-top: 75px;
+  font-weight: 800;
   color: var(--color-primary);
+  transition: 0.4s;
 }
-
 .portrait {
-  width: 25;
   border-radius: 20%;
   float: right;
 }
-
 .subtitle {
   width: 50%;
   margin-top: 50px;
@@ -71,6 +70,7 @@ html {
   font-weight: 300;
   text-decoration: none;
   color: var(--color-text);
+  transition: 0.4s;
 }
 
 .floating {
@@ -80,7 +80,6 @@ html {
   animation-timing-function: cubic-bezier(0.5, 0.15, 0.5, 0.85);
   margin-top: 5px;
 }
-
 @keyframes floating {
   0% {
     transform: translate(0, 0px);
@@ -93,28 +92,38 @@ html {
   }
 }
 
+/* footer */
+
+.footer {
+  text-align: center;
+  width: 100%;
+  font-size: 20px;
+  margin-bottom: 1rem;
+}
+
 /* nav bar */
 
 nav {
   width: 100%; /* ensure navbar spans entire screen */
-  margin: 0 0 1em 0;
-  padding: 5px 0;
-  transition: 0.5s;
+  margin: 0 0 1rem 0;
+  padding: 1ex 0;
+  transition: 0.4s;
   opacity: 0.95;
   background-color: var(--color-background);
   position: fixed; /* sticky navbar */
   top: 0;
+  z-index: 2;
 }
 
 .nav-text {
-  margin-top: -37px;
-  padding-top: 13.5px;
+  margin-top: -2rem;
+  padding-top: 1.5ex;
   display: inline-block;
 }
 
 .logo {
   float: left;
-  margin-top: -37px;
+  margin-top: -2rem;
 }
 
 nav ul {
@@ -132,19 +141,19 @@ nav li {
 hr.one {
   border: none;
   max-width: 600px;
-  margin: 37px auto;
+  margin: 2rem auto;
   height: 2px;
   background: var(--color-text);
 }
 
 nav li a {
-  padding-right: 15px;
-  padding-left: 20px;
+  padding-right: 1rem;
+  padding-left: 1rem;
   color: var(--color-text);
   font-size: 28px;
   font-weight: 300;
   cursor: pointer;
-  transition: 0.6s;
+  transition: 0.4s;
   text-decoration: none;
 }
 
