--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Exo");
-
 /*
 Color Scheme
 Background colors: #1A202C
@@ -19,58 +17,82 @@ Gray: #2D313D, lighter: #40444F
   --color-secondary-hover: #40444f;
 }
 
-body {
-  background-color: var(--color-background);
+.container {
+  min-height: 100%;
+  min-width: 100%;
+  position: absolute;
+  margin: auto;
+
+  font-family: Exo;
+  color: var(--color-text);
 }
 
-div {
-  margin: auto;
-  font-family: Exo;
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+
+  background-color: var(--color-background);
 }
 
 main {
   max-width: 1200px;
-  margin-top: 120px;
+  margin-top: 90px;
   margin-left: auto;
   margin-right: auto;
+
   color: var(--color-text);
 }
 
-/* remove scroll */
-
-html {
-  overflow: scroll;
-  overflow-x: hidden;
-}
-::-webkit-scrollbar {
-  width: 0; /* Remove scrollbar space */
-}
-
-/* index page */
-
-.intro {
-  width: 100%;
-  padding: 2rem 3rem;
+.content {
+  padding: 2rem 2rem;
   z-index: 1;
+
 }
-.header {
-  padding-top: 75px;
+
+h1 {
+  font-size: 2.5rem;
   font-weight: 800;
+
   color: var(--color-primary);
   transition: 0.4s;
 }
-.portrait {
-  border-radius: 20%;
-  float: right;
-}
-.subtitle {
-  width: 50%;
-  margin-top: 50px;
-  font-size: 30px;
+
+p {
+  font-size: 1.25rem;
   font-weight: 300;
-  text-decoration: none;
-  color: var(--color-text);
-  transition: 0.4s;
+}
+
+/* Home Page */
+
+.intro-grid {
+  display: grid;
+  grid-template-columns: [first] 5% [left-text] 50% [right-text] auto [left-image] 35% [right-image];
+  grid-template-rows: [top-image] 100px [top-title] 80px [top-subtitle] auto [bottom-image];
+}
+
+.intro-portrait {
+  border-radius: 20%;
+
+  grid-column-start: left-image;
+  grid-column-end: right-image;
+
+  grid-row-start: top-image;
+  grid-row-end: bottom-image;
+}
+
+.intro-title {
+  grid-column-start: left-text;
+  grid-column-end: right-text;
+
+  grid-row-start: top-title;
+}
+
+.intro-subtitle {
+  grid-column-start: left-text;
+  grid-column-end: right-text;
+
+  grid-row-start: top-subtitle;
 }
 
 .floating {
@@ -92,89 +114,120 @@ html {
   }
 }
 
-/* footer */
+/* Footer */
 
 .footer {
-  text-align: center;
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  font-size: 20px;
-  margin-bottom: 1rem;
+  height: 40px;
+
+  text-align: center;
 }
 
-/* nav bar */
+/* Navbar */
 
 nav {
-  width: 100%; /* ensure navbar spans entire screen */
-  margin: 0 0 1rem 0;
-  padding: 1ex 0;
-  transition: 0.4s;
+  width: 100%;
+  position: fixed;
+  margin: 0;
+  padding: 10px 0;
+  top: 0;
+
   opacity: 0.95;
   background-color: var(--color-background);
-  position: fixed; /* sticky navbar */
-  top: 0;
   z-index: 2;
 }
 
-.nav-text {
-  margin-top: -2rem;
-  padding-top: 1.5ex;
-  display: inline-block;
-}
-
-.logo {
-  float: left;
-  margin-top: -2rem;
-}
-
-nav ul {
+.nav-list {
   max-width: 1200px;
-  list-style-type: none;
+  width: 100%;
   margin: 0 auto;
-  padding: 0;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: center;
+  list-style-type: none;
 }
 
-nav li {
-  float: right;
-  transition: 0.4s;
+.nav-text {
+  order: 1;
+  margin-right: 2rem;
 }
 
-hr.one {
-  border: none;
-  max-width: 600px;
-  margin: 2rem auto;
+.nav-logo {
+  margin-right: auto;
+  margin-left: -1rem;
+}
+
+.nav-line {
+  width: 100%;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+hr.navline {
   height: 2px;
   background: var(--color-text);
+  border: none;
 }
 
 nav li a {
-  padding-right: 1rem;
-  padding-left: 1rem;
   color: var(--color-text);
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: 300;
-  cursor: pointer;
   transition: 0.4s;
   text-decoration: none;
 }
 
-nav li:hover {
-  transform: scale(1.05);
+/* Animation */
+
+.nav-logo {
+  transition: 0.4s;
 }
 
-/* sketchy redundant fix, can't figure out why Link sometimes doesnt change its color */
-nav a:hover {
-  color: var(--color-primary);
+.nav-logo:hover {
+  transform: scale(1.1);
 }
 
 .hyperlink {
   text-decoration: none;
   color: var(--color-text);
+  transition: 0.4s;
 }
+
+a:hover {
+  color: var(--color-primary);
+}
+
+/* Utility */
 
 .underline {
   text-decoration: underline;
 }
 
-.hyperlink:hover {
-  color: var(--color-primary);
+.absolute {
+  position: absolute;
+}
+.relative {
+  position: relative;
+}
+
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+
+/* Remove Scroll */
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0;
 }
