--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -68,17 +68,24 @@ p {
   font-size: 1.25rem;
   font-weight: 300;
 }
+/*
+  width: 50px;
+
+  color: var(--color-primary);
+
+
+
+*/
+
 
 .fa-adj {
   width: 100%;
   margin-top: -50px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
   display: block;
   position: relative;
-  width: 50px;
-
-  color: var(--color-primary);
 
   animation-name: appear;
   animation-duration: 4s;
@@ -96,7 +103,7 @@ p {
     opacity: 100%;
   }
 }
-.fa-adj:hover {
+.color-shift:hover {
   color: var(--color-text);
 }
 
