--- a/src/components/main.css
+++ b/src/components/main.css
@@ -56,16 +56,6 @@ main {
   z-index: 1;
   min-height: calc(100vh - 90px - 100px);
 }
-/*
-path {
-  fill: yellow;
-  stroke: black;
-  stroke-width: 8px;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  pointer-events: none;
-}
-*/
 
 h1 {
   font-size: 2.5rem;
@@ -85,6 +75,8 @@ h3 {
   font-size: 1.25rem;
   font-weight: 300;
   color: var(--color-text);
+
+  line-height: 2rem;
 }
 
 p {
@@ -92,15 +84,64 @@ p {
   font-weight: 300;
 }
 
-/* Timeline (Home Page) */
-
 .section {
   width: 100%;
+  margin-top: 3rem;
+  margin-bottom: 12rem;
+
   background-image: linear-gradient(
     var(--color-background-secondary),
     var(--color-background)
   );
 }
+
+.cert-title {
+  width: 100%;
+  text-align: center;
+  margin: 2rem auto;
+}
+
+
+.certifications {
+  max-width: 1200px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 12rem;
+  padding: 4rem 2rem;
+  
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: 1rem;
+  row-gap: 1rem;
+
+  justify-content: center;
+  grid-template-areas:
+  "CSWE CSWE CSWP CSWPSU CSWPWD CSWPSM CSWPDT"
+  "CSWE CSWE CSWA CSWAAM . . .";
+}
+
+.badge {
+  align-self: center;
+
+  transform: scale(0.95);
+  opacity: 1;
+  transition: 0.4s;
+}
+
+@media only screen and (max-width: 768px) {
+  .badge{
+    transform: scale(1.2);
+  }
+}
+
+.badge:hover {
+  transform: scale(1);
+  opacity: 0.95;
+}
+
 
 /* Footer */
 
