--- a/src/components/timeline.css
+++ b/src/components/timeline.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
 
   display: grid;
-  height: 900px;
+  height: 1300px;
 
   align-items: center;
   padding: 2rem 2rem;
@@ -13,12 +13,11 @@
     [left-text-left] 1fr [left-text-right]
     2% [seg-1] 3% [seg-2] 5% [seg-3] 3% [seg-4] 2%
     [left-block-left] 3% [left-block-right]
-    75px [middle-line] 75px
+    6% [middle-line] 6%
     [right-block-left] 3% [right-block-right]
     2% [seg-5] 3% [seg-6] 5% [seg-7] 3% [seg-8] 2%
     [right-text-left] 1fr [right-text-right];
   grid-template-rows:
-    [top-title] 100px [bottom-title] 0.5fr
     [current spring-2022 item-1] 0.5fr [midfall-2021] 0.5fr
     [fall-2021] 0.5fr [midsummer-2021] 0.5fr [summer-2021] 1fr [spring-2021] 0.5fr [midfall-2020] 0.5fr
     [fall-2020 item-2] 0.5fr [midsummer-2020] 0.5fr [summer-2020] 1fr [spring-2020] 1fr
@@ -29,9 +28,7 @@
 
 .timeline-title {
   text-align: center;
-  grid-column-start: left-text-left;
-  grid-column-end: right-text-right;
-  grid-row-start: top-title;
+  padding-top: 3rem;
 }
 
 .timeline > hr.time-line {
@@ -81,8 +78,8 @@
 .timeline-year-text {
   text-align: center;
   grid-column: left-block-right / right-block-left;
-  max-height: 30px;
-  margin-bottom: 10px;
+  max-height: 2rem;
+  margin-bottom: 1rem;
   margin-top: 0;
 }
 
