--- a/src/components/main.css
+++ b/src/components/main.css
@@ -18,13 +18,14 @@ Gray: #2D313D, lighter: #40444F
   --color-primary-hover: #4fd1c5;
   --color-secondary: #2d313d;
   --color-secondary-hover: #40444f;
+  --color-tertiary: #57a19a;
 }
 
 .container {
   min-height: 100%;
   min-width: 100%;
   position: absolute;
-  margin: auto;
+  padding: 0 0;
 
   font-family: Exo;
   color: var(--color-text);
@@ -45,17 +46,6 @@ main {
   margin-right: auto;
 
   color: var(--color-text);
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-
-  padding: 2rem 2rem;
-  z-index: 1;
-  min-height: calc(100vh - 90px - 100px);
 }
 
 h1 {
@@ -80,6 +70,13 @@ h3 {
   line-height: 2rem;
 }
 
+h4 {
+  font-size: 1.25rem;
+  font-weight: 300;
+  color: var(--color-text-secondary);
+  line-height: 2rem;
+}
+
 p {
   font-size: 1rem;
   font-weight: 300;
@@ -87,10 +84,19 @@ p {
   color: var(--color-text-secondary);
 }
 
+b {
+  font-weight: 600;
+}
+
 .section {
   width: 100%;
-  margin-top: 3rem;
-  margin-bottom: 5rem;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 2rem;
 
   padding: 3rem 0;
 }
@@ -105,6 +111,14 @@ p {
   background: var(--color-background-secondary);
 }
 
+.section.box {
+  width: 1000px;
+  margin: 5rem auto;
+  padding: 1rem 0;
+  background: var(--color-secondary);
+  border-radius: 0.75rem;
+  border: 2px solid var(--color-primary);
+}
 
 .title {
   width: 100%;
@@ -112,14 +126,13 @@ p {
   margin: 0 auto;
 }
 
-
 .certifications {
   max-width: 1200px;
-  height: 400px;
+  height: 350px;
   margin-left: auto;
   margin-right: auto;
-  padding: 4rem 2rem;
-  
+  padding: 2rem;
+
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -128,8 +141,8 @@ p {
 
   justify-content: center;
   grid-template-areas:
-  "CSWE CSWE CSWP CSWPSU CSWPWD CSWPSM CSWPDT"
-  "CSWE CSWE CSWA CSWAAM . . .";
+    "CSWE CSWE CSWP CSWPSU CSWPWD CSWPSM CSWPDT"
+    "CSWE CSWE CSWA CSWAAM . . .";
 }
 
 .badge {
@@ -140,15 +153,51 @@ p {
   transition: 0.4s;
 }
 
-@media only screen and (max-width: 768px) {
-  .badge{
-    transform: scale(1.2);
-  }
-}
-
 .badge:hover {
   transform: scale(0.98);
   opacity: 0.95;
+}
+
+@media only screen and (max-width: 768px) {
+  .badge {
+    transform: scale(1.2);
+  }
+  .badge:hover {
+    transform: scale(1.1);
+  }
+}
+
+.skills {
+  max-width: 1200px;
+  width: 100%;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2rem 0;
+
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  column-gap: 1.5rem;
+  row-gap: 1rem;
+  align-items: flex-start;
+
+  justify-content: space-around;
+  grid-template-areas: "CAD CNC AM ECAD Render";
+}
+
+.skill {
+  width: 100%;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.skill-header {
+  margin-top: 2rem;
+  margin-bottom: 0.75rem;
 }
 
 
@@ -165,7 +214,7 @@ p {
 
 /* hyperlink */
 
-.hyperlink-white {
+.hyperlink-white, .hyperlink-gray {
   text-decoration: none;
   color: var(--color-text);
   transition: 0.4s;
@@ -175,6 +224,10 @@ p {
   text-decoration: none;
   color: var(--color-primary);
   transition: 0.4s;
+}
+
+.hyperlink-gray:hover {
+  color: var(--color-text-secondary);
 }
 
 a:hover {
