--- a/src/components/main.css
+++ b/src/components/main.css
@@ -112,7 +112,7 @@ b {
 }
 
 .section.box {
-  width: 1000px;
+  max-width: 1000px;
   margin: 5rem auto;
   padding: 1rem 0;
   background: var(--color-secondary);
@@ -173,11 +173,11 @@ b {
   height: 400px;
   margin-left: auto;
   margin-right: auto;
-  padding: 2rem 0;
+  padding: 2rem 1rem;
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  column-gap: 1.5rem;
+  column-gap: 1.4rem;
   row-gap: 1rem;
   align-items: flex-start;
 
