--- a/src/components/main.css
+++ b/src/components/main.css
@@ -16,6 +16,7 @@ HSV: 215 62 (17, 25, 32)
 @font-face {
   font-family: 'Exo';
   src: local('Exo'), url(../fonts/Exo-VariableFont_wght.ttf) format('truetype');
+  font-display: swap;
 }
 
 :root {
