--- a/src/components/main.css
+++ b/src/components/main.css
@@ -91,7 +91,7 @@ b {
   font-weight: 600;
 }
 
-.section {
+section {
   width: 100%;
   margin-top: 6rem;
   margin-bottom: 6rem;
@@ -104,17 +104,17 @@ b {
   padding: 3rem 0;
 }
 
-.section.gradient {
+section.gradient {
   background-image: linear-gradient(
     var(--color-background-secondary),
     var(--color-background)
   );
 }
-.section.solid {
+section.solid {
   background: var(--color-background-secondary);
 }
 
-.section.box {
+section.box {
   max-width: 1000px;
   margin: 5rem auto;
   padding: 1rem 0;
@@ -123,12 +123,13 @@ b {
   border: 2px solid var(--color-primary);
 }
 
+
+
 .title {
   width: 100%;
   text-align: center;
   margin: 0 auto;
 }
-
 
 .modal-portal {
   position: absolute;
@@ -159,8 +160,6 @@ b {
   gap: 0.5rem;
 }
 
-
-
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -173,7 +172,8 @@ b {
 
 
 
-/* Page specific CSS modules */
+
+
 
 .modal-exit {
   position: fixed;
@@ -187,9 +187,7 @@ b {
   color:var(--color-text);
 }
 
-
-
-
+/* Page specific CSS modules */
 
 .projects {
   width: 1280px;
