--- a/src/components/timeline.css
+++ b/src/components/timeline.css
@@ -35,6 +35,7 @@
   grid-column: left-block-right / right-block-left;
   grid-row: current / fall-2017;
   background: var(--color-text);
+  opacity: 20%;
 }
 
 .timeline > .dot {
@@ -109,13 +110,14 @@
   grid-column: seg-6 / seg-7;
 }
 
-.timeline-segment {
+hr.timeline-segment {
   margin-top: 0;
   margin-bottom: auto;
-
+  width: 100%;
   height: 0.75px;
-  color: var(--color-text);
-  opacity: 85%;
+  background-color: white;
+  border: none;
+  opacity: 100%;
 }
 
 .timeline-segment.left-left {
