--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Exo';
+  src: local('Exo'), url(/Exo-VariableFont_wght.ttf) format('truetype');
+  font-display: block;
+}
+
+:root {
+  -webkit-font-smoothing: antialiased;
+  --color-background: #0b141f;
+  --color-background-secondary: #152538;
+  --color-background-tertiary: #1f2937;
+  --color-text: #fff;
+  --color-primary: #81e5d9;
+  --color-primary-hover: #4fd1c5;
+}
+
+body {
+  min-height: 100%;
+  min-width: 100%;
+  position: absolute;
+
+  font-family: Exo;
+  color: var(--color-text);
+  background-color: var(--color-background);
+}
+
 html {
   overflow: scroll;
   overflow-x: hidden;
