added tailwind responsive elements

--- a/src/styles/timeline.css
+++ b/src/styles/timeline.css
@@ -78,7 +78,7 @@
   background-color: transparent;
   height: calc(100% - 0.25rem);
   width: 100%;
-  border-radius: 0.7rem;
+  border-radius: 5px;
   opacity: 0.5;
 }
 
