--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -14,51 +14,36 @@
   border-color: #81e5d9;
 }
 
-
 .modalPortal {
   position: absolute;
   top: 2.5rem;
-  left: 2rem;
-  right: 2rem;
+  width: 1280px;
 
-  padding: 5rem 1rem 2rem 1rem;
+  left: calc(50vw - 1280px/2);
 
-  max-height: screen;
-  border-radius: 1rem;
+  padding: 4rem 2rem;
+
+  max-height: calc(100vh - 4rem);
+  height: auto;
+  border-radius: 0.75rem;
 
   z-index: 20;
 
   background-color: #1f2937;
-  overflow: scroll;
+  overflow-y: scroll;
 }
-
-/*
-.modalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
-  z-index: 30;
-  
-  -webkit-backdrop-filter: blur(4px);
-  backdrop-filter: blur(4px);
-}
-*/
 
 .modalOverlay {
   background-color: transparent;
 }
 
 .modalThumbnail {
-  margin-bottom: 1rem; 
+  margin-bottom: 1rem;
   height: 15rem;
-  
+
   border: #4b5563 solid 1px;
   border-radius: 0.375rem;
 }
-
 
 .modalContent {
   max-width: 1280px;
@@ -75,31 +60,54 @@
 
 .modalExit {
   position: fixed;
-  top: 4rem;
-  right: 3rem;
-
-  height: 4rem;
-  width: 4rem;
-
+  top: 3.5rem;
+  right: calc(50vw - 1280px/2 + 2rem);
+  
   cursor: pointer;
+}
+
+.modalExitIcon {
+  color: #81e5d9;
+}
+
+.modalExitIcon:hover {
+  color: white;
 }
 
 @media only screen and (max-width: 640px) {
   .modalPortal {
-    left: 2.5rem;
-    right: 2.5rem;
+    max-height: calc(100vh - 10.5rem);
+    padding: 2rem;
+  }
+
+  .modalExit {
+    top: auto !important;
+    right: auto !important;
+    
+    bottom: 1rem;
+    left: 2rem;
+    width: calc(100vw - 4rem);
+
+    text-align: center;
+
+    border: #81e5d9 solid 1px;
+    border-radius: 0.75rem;
+    background-color: #1f2937;
   }
 }
 
-
-@media only screen and (max-width: 768px) {
+@media (max-width: 1344px) {
   .modalPortal {
-    padding: 4rem;
+    --width: calc(100vw - 64px);
+    width: var(--width);
+    left: calc(50vw - var(--width)/2);
+  }
+  .modalExit {
+    right: 4rem;
   }
 }
 
 .ReactModal__Overlay {
-
   z-index: 30;
 
   transform: translateY(-50px);
@@ -108,8 +116,6 @@
 }
 
 .ReactModal__Overlay--after-open {
-  
-  
   transform: translateX(0px);
 
   -webkit-backdrop-filter: blur(5px);
