--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -21,7 +21,7 @@
 
   left: calc(50vw - 1280px/2);
 
-  padding: 4rem 2rem;
+  padding: 4rem;
 
   max-height: calc(100vh - 4rem);
   height: auto;
@@ -53,9 +53,9 @@
   display: flex;
   flex-direction: column;
   flex-direction: start;
-  gap: 1.25rem;
+  gap: 1rem;
 
-  text-align: left;
+  letter-spacing: 0.02em;
 }
 
 .modalExit {
@@ -94,6 +94,10 @@
     border-radius: 0.75rem;
     background-color: #1f2937;
   }
+
+  .modalImage {
+    max-width: 100% !important;
+  }
 }
 
 @media (max-width: 1344px) {
@@ -120,4 +124,12 @@
 
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
+}
+
+.modalImage {
+  max-width: 60%;
+  max-height: 24rem;
+  margin: 1rem auto;
+  text-align: center;
+  border-radius: 0.5rem;
 }
