--- a/src/styles/timeline.css
+++ b/src/styles/timeline.css
@@ -4,11 +4,11 @@
 
   grid-template-columns:
     [left-text-left] 1fr [left-text-right]
-    2% [seg-1] 3% [seg-2] 5% [seg-3] 3% [seg-4] 2%
+    2% [seg-1] 3% [seg-2] 4% [seg-3] 3% [seg-4] 2%
     [left-block-left] 3% [left-block-middle] 3% [left-block-right]
-    4% [middle-line] 4%
+    3% [middle-line] 3%
     [right-block-left] 3% [right-block-middle] 3% [right-block-right]
-    2% [seg-5] 3% [seg-6] 5% [seg-7] 3% [seg-8] 2%
+    2% [seg-5] 3% [seg-6] 4% [seg-7] 3% [seg-8] 2%
     [right-text-left] 1fr [right-text-right];
   grid-template-rows:
     [current summer-2023] 1fr [spring-2023] 0.5fr [midfall-2022] 0.5fr
@@ -53,7 +53,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .timeline-text.multi {
@@ -77,8 +77,9 @@
 .timeline-year-text {
   text-align: center;
   grid-column: left-block-right / right-block-left;
+  font-size: 0.75rem;
   max-height: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.75rem;
   margin-top: 0;
 }
 
@@ -161,33 +162,42 @@ line.timelineBar.secondary {
 
 #LHR_text:hover ~ #LHR {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 #J2:hover ~ #J2 {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 #J1:hover ~ #J1 {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 #TREL_text:hover ~ #TREL {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 #CMS:hover ~ #CMS {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 #FTC:hover ~ #FTC {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 
 #Inventory:hover ~ #Inventory {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 
 #PMCL:hover ~ #PMCL {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 
 #Apptronik:hover ~ #Apptronik {
   opacity: 100%;
+  border: 1.5px solid white;
 }
 
 @media only screen and (max-width: 768px) {
